--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.2
+  dartz: ^0.10.1
+  dio: ^5.1.2
+  flutter_secure_storage: 8.0.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
